New files added and configs

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 4000
-MONGODB_CNN=mongodb+srv://admin:kevin1294@cluster0.advfx.mongodb.net/ecommerce
+SOURCE_DATABSE_MONGO=mongodb+srv://admin:kevin1294@cluster0.advfx.mongodb.net/ecommerce
