--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "API - Backend Apple Store Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "author": "Kevin Luciano",
   "license": "ISC",
@@ -14,6 +16,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.4.1"
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.6",
+    "nodemon": "^2.0.15"
   }
 }
