--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 4000
 SOURCE_DATABSE_MONGO=mongodb+srv://admin:kevin1294@cluster0.advfx.mongodb.net/ecommerce
+TOKEN_MP=TEST-523672968255333-031915-51aeb178027239c8f460bb041856eaa9-130775631
